syntax = "proto3";

package probuf;

option go_package = "/probuf";

service OracleNodeService {
  rpc CheckForRequest (AckClient) returns (AckServer) {}
  rpc SendRequest (RequestFromClient) returns (ResponseToClient) {}
  rpc ResponseDelivery (Result) returns (Receipt) {}
}

// messages for initial connection
message AckClient {
  bool ack = 1;
}
// messages for initial connection
message AckServer {
  bool ack = 1;
  uint64 requestId = 2;
}
// messages for request
message RequestFromClient{
  uint64 requestId = 2;
}

message ResponseToClient {
  string iotId = 1;
  uint64 requestId = 2;
  bool requireResult = 3;
}

message Result {
  string iotId = 1;
  uint64 requestId = 2;
  bool requireResult = 3;
  bool actualResult = 4;
}

message Receipt {
  uint64 requestId = 1;
  uint64 receiptHash = 2;
}